# sain-glm-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md
sain_glm_agent/: __init__.py  cli.py
sain_glm_agent/agent/: __init__.py  orchestrator.py  state.py
sain_glm_agent/config/: __init__.py  settings.py
sain_glm_agent/logging_/: __init__.py  logger.py
sain_glm_agent/memory/: __init__.py  conversation.py
sain_glm_agent/prompts/: __init__.py  manager.py
sain_glm_agent/providers/: __init__.py  base.py  factory.py  glm.py  stubs.py
sain_glm_agent/repository/: __init__.py  analyzer.py  github_client.py
sain_glm_agent/tools/: __init__.py  executor.py  registry.py
src/sain_glm_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  exceptions.py  logging_utils.py  memory.py  models.py  prompts.py  repository.py  tools.py
src/sain_glm_agent/application/: __init__.py  agent.py
src/sain_glm_agent/domain/: entities.py  interfaces.py
src/sain_glm_agent/infrastructure/: __init__.py
src/sain_glm_agent/infrastructure/config/: __init__.py  settings.py
src/sain_glm_agent/infrastructure/github/: __init__.py  repository.py
src/sain_glm_agent/infrastructure/logging/: __init__.py  setup.py
src/sain_glm_agent/infrastructure/memory/: __init__.py  base.py  file_store.py  inmemory.py
src/sain_glm_agent/infrastructure/providers/: __init__.py  base.py  glm.py  registry.py
src/sain_glm_agent/interfaces/: __init__.py
src/sain_glm_agent/interfaces/cli/: main.py
src/sain_glm_agent/prompts/: __init__.py  manager.py
src/sain_glm_agent/providers/: __init__.py  base.py  glm.py  registry.py
src/sain_glm_agent/tools/: __init__.py  base.py  repository.py
tests/: __init__.py  test_agent.py  test_cli.py  test_config.py  test_glm_provider.py  test_memory.py  test_prompts.py  test_providers.py  test_repository.py  test_settings.py  test_tools.py
