[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sain-glm-agent"
version = "0.1.0"
description = "Production-ready AI coding agent framework centered on GLM-5.2."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SAIN" }]
license = { text = "MIT" }
keywords = ["ai", "agent", "glm", "github", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.scripts]
sain-glm-agent = "sain_glm_agent.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["sain_glm_agent"]
warn_unused_configs = true
