[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sain-glm-agent"
version = "0.1.0"
description = "SAIN Enterprise AI coding agent using GLM for intelligent software engineering, automation, and repository management."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SAIN Team" }]
keywords = ["ai", "agent", "glm", "coding", "github", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "zhipuai>=2.1.5",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "PyGithub>=2.2.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "types-requests>=2.31.0",
]

[project.scripts]
sain-agent = "sain_glm_agent.cli:main"

[project.urls]
Homepage = "https://github.com/Elovvaan/sain-glm-agent"
Repository = "https://github.com/Elovvaan/sain-glm-agent"
Issues = "https://github.com/Elovvaan/sain-glm-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sain_glm_agent*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PTH"]
ignore = ["B008", "N806"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["sain_glm_agent"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
